--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -116,6 +116,12 @@
               "Content-Type": "application/json"
             },
           });
+
+          if (response.status === 201) {
+            window.location.set("/thanks.html");
+          } else {
+            alert("Upload failed. Please check network connectivity and try again.");
+          }
         });
     </script>
 </body>
