--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,6 +25,20 @@
             border: 3px solid #696969;
             touch-action: none;
         }
+
+        #sending-message {
+          position: absolute;
+          width: 60vw;
+          height: 30vh;
+          top: 35vh;
+          left: 20vw;
+          z-index: 2;
+          border: 3px solid black;
+          border-radius: 6px;
+          background-color: grey;
+          text-align: center;
+          visibility: hidden;
+        }
     </style>
 </head>
 <body>
@@ -43,6 +57,11 @@
                 <button id="send-button">send</button>
             </div>
         </div>
+    </div>
+
+    <div id="sending-message">
+      <h1>sending...</h1>
+      <p>please wait</p>
     </div>
 
     <script>
@@ -102,10 +121,15 @@
           }
         });
 
-        document.getElementById("send-button").addEventListener("click", async () => {
+        document.getElementById("send-button").addEventListener("click", async (ev) => {
           const artist = prompt("Artist's name: ");
 
-          //TODO: Disable inputs and show sending message
+          // Disable inputs and show sending message
+          document.getElementById("sending-message").style.visibility = "visible";
+          ev.target.disabled = true;
+          document.getElementById("clear-button").disabled = true;
+
+          // Submit the drawing
           const response = await fetch("/api/drawing", {
             method: "POST",
             body: JSON.stringify({
@@ -118,7 +142,7 @@
           });
 
           if (response.status === 201) {
-            window.location.set("/thanks.html");
+            window.location.assign("/static/thanks.html");
           } else {
             alert("Upload failed. Please check network connectivity and try again.");
           }
